[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "mptuple3d"
version = "1!0.0.1761254851"
description = "plots 3-tuples in 3D space"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
requires-python = ">=3.11"
license = "ISC"


[project.urls]
Homepage = "https://github.com/jakeogh/mptuple3d"

[project.scripts]
mptuple3d = "mptuple3d.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
mptuple3d = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = ["asserttool>=1!0.0.1761250315", "click-auto-help>=0.0.1761041641", "clicktool>=0.0.1761033403", "configtool>=1!0.0.1761254803", "globalverbose>=0.0.1761031290", "unmp>=0.0.1761031424"]
dependencies-git = [
	"asserttool @ git+https://github.com/jakeogh/asserttool", 
	"click-auto-help @ git+https://github.com/jakeogh/click-auto-help", 
	"clicktool @ git+https://github.com/jakeogh/clicktool", 
	"configtool @ git+https://github.com/jakeogh/configtool", 
	"globalverbose @ git+https://github.com/jakeogh/globalverbose", 
	"unmp @ git+https://github.com/jakeogh/unmp"
]
index-urls = ["jakeogh.github.io", "pip-index"]
